--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta Information -->
     <title>Home Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- App CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
+    <!-- External CSS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
+
+
+    <!-- App JS -->
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
+
+    <!-- External JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+
+
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <nav>
+      <div>WiKi</div>
+      <div class="home">
+        <a href="/" rel="" tabindex="0">
+          <span>Home</span>
+        </a>
+      </div>
+      <div id="searchBoxContainer">
+          <input type="text" name="searchBoxInput" placeholder="Search" role="combobox">
+      </div>
+      <div>
+        <button class="login" tabindex="0">
+          <i class="far fa-user-circle"></i>
+          <span>log in</span>
+        </button>
+      </div>
+    </nav>
+    <header>
+      <div></div>
+    </header>
+
   </body>
 </html>
