--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/posts.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -58,7 +58,7 @@
       </div>
     </nav>
     <header>
-      <div class = "text-post"></div>
+      <div class = "text-post" id ="content"></div>
     </header>
   </body>
 </html>
