--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,14 +44,15 @@
           <span>UpSkill</span>
         </a>
       </div>
-      <div class="favourite">
-        <a href="/" id="wall">
-          <span>My Wall</span>
-        </a>
-      </div>
+    </div>
+    <div class="favourite">    
+        <span>My Wall</span>
     </div>
     <div class="search">
       <span>Search</span>
+    </div>
+    <div class="new-post">
+      <span>Compose Post</span>
     </div>
     <div>
       <button class="login" tabindex="0">
@@ -86,7 +87,44 @@
     </form>
   </div>
   <header>
-    <div class="text-post"></div>
+    <div class="new_post_form">
+      <form action="/create" method="POST">
+        <div>
+          <label for="title">Title:</label>
+          <textarea name="title" id="new_title"></textarea>
+        </div>
+        <div>
+          <label for="topic">Topic:</label>
+          <textarea name="topic" id="new_topic"></textarea>
+        </div>
+        <div>
+          <label for="description">Description:</label>
+          <textarea name="description" id="new_description"></textarea>
+        </div>
+        <div>
+          <label for="url">URL:</label>
+          <textarea name="url" id="new_url"></textarea>
+        </div>
+        <div>
+          <label for="type">Type:</label>
+          <select name="type" id="new_type">
+            <option value="1">Video</option>
+            <option value="2">Article</option>
+            <option value="3">Quiz</option>
+            <option value="4">Blog</option>
+            <option value="5">Documentation</option>
+            <option value="6">Resource Hub</option>
+          </select>
+          <button type="submit">Submit</button>
+        </div>
+      </form>
+    </div>
+    <div class="text-post">
+    </div>
+    <div class="my-wall">
+      <div class="my-post"></div>
+      <div class="favourite-post"></div>
+    </div>
   </header>
 </body>
 
