will reset to before the delete branch

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,7 @@
     </div>
   </nav>
   <div id="searchBoxContainer">
-    <form action="/api/users/search" METHOD="POST" class="search_form" id="search-form">
+    <form class="search_form" id="search-form">
       <div class="label">
         <label for="title">Title:</label>
         <textarea id="title" name="title"></textarea>
