--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,11 +45,11 @@
         </a>
       </div>
     </div>
-    <div class="favourite">    
+    <div class="favourite">
         <span>My Wall</span>
     </div>
     <div class="search">
-      <span>Search</span>
+      <button id="search_button">Search</button>
     </div>
     <div class="new-post">
       <span>Compose Post</span>
