--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,6 +85,8 @@
     </form>
   </div>
   <header>
+    <div id = "comments_div">
+    </div>
     <div class="new_post_form">
       <form action="/create" method="POST">
         <div>
