--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -56,6 +56,7 @@ nav {
     outline: none;
   }
 }
+
 .search_form {
   min-width: 200px;
   padding-top: 100px;
@@ -91,6 +92,7 @@ textarea {
   margin-left: 33%;
   margin-right: 33%;
   padding: 10px;
+  margin-top: 50px;
 }
 
 #source_button{
