add style for single post form

--- a/styles/posts.scss
+++ b/styles/posts.scss
@@ -23,6 +23,9 @@
   padding: 5px;
   background-position: center;
   background-size: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 h4 {
