style single post page

--- a/styles/single_post.scss
+++ b/styles/single_post.scss
@@ -17,3 +17,10 @@
 #comments_section {
   margin-top: 30px;
 }
+
+#new_comment {
+  border:none;
+  border-bottom: 3px solid black;
+  width: 500px;
+  background-color: yellowgreen;
+}
