--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,8 +86,7 @@
     </form>
   </div>
   <header>
-    <div id = "comments_div">
-    </div>
+    <div id = "comments_div"></div>
     <div class="new_post_form">
       <form action="/create" method="POST">
         <div>
