--- a/views/index.ejs
+++ b/views/index.ejs
@@ -132,11 +132,15 @@
     </div>
     <div class="text-post">
     </div>
+    <div class = "my-wall-title">
+      <span id="m">My Posts</span>
+      <span id="f">Favourite</span>
+    </div>
     <div class="my-wall">
       <div class="my-post"></div>
+      <div class="vl"></div>
       <div class="favourite-post"></div>
     </div>
   </header>
 </body>
-
 </html>
