--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -10,9 +10,10 @@ html {
 
 body {
   color: #545149;
-  background-color: #f4f1ec;
+  background-color: white;
   font-size: 24px;
   font-weight: normal;
   border:none;
   width: 95vw;
+
 }
