--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -1,16 +1,21 @@
 nav {
   height: 80px;
-  background: green;
+  background-color: rgb(255, 255, 255);
   width: 100vw;
   padding: 1em;
   font-family: Helvetica;
   font-size: 24px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   flex-direction: row;
   position:fixed;
   top:0;
+  border-bottom: solid black;
+
+  font-family: 'Roboto Mono, monospace';
+  box-shadow: 0px 2px 10px rgb(134, 133, 133);
+
   .home #pagename {
     height: 48px;
     min-width: 60px;
@@ -32,15 +37,22 @@ nav {
 
 #searchBoxContainer {
   height: auto;
-  background-color: greenyellow;
+  background-color: rgb(228, 228, 228);
   padding-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border: solid black;
   width: auto;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 25%;
+  margin-right: 25%;
   border-radius:0px 0px 30px 30px;
+  color: black;
+  font-family:'Roboto Mono, monospace';
 
   .label{
     vertical-align: center;
+    margin: 5px;
   }
 
   textarea {
@@ -56,6 +68,21 @@ nav {
     font-size: small;
     outline: none;
   }
+
+  #submit_search{
+    border-radius: 10px;
+    width: auto;
+    border: solid black;
+    background-color: black;
+    color: white;
+    height: 30px;
+  }
+
+  #submit_search:hover{
+    transition: 0.5s;
+    color: black;
+    background-color: white;
+  }
 }
 
 .search_form {
@@ -68,10 +95,25 @@ nav {
 }
 
 .buttons {
-  height: 80px;
-  width: 310px;
+  height: 30px;
+  width: 150px;
   margin: -5px;
-  background-color: green;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 15px;
+  margin-left: 10px;
+  border: none;
+  color: black;
+  background-color: white;
+}
+
+.buttons#new-post{
+  width:200px;
+}
+
+#search_button {
+  font-size: 30px;
+  font-weight: bold;
 }
 
 textarea {
@@ -85,15 +127,107 @@ textarea {
   justify-content: center;
 }
 
+#login-div{
+  order: 3;
+  margin-left: -10%;
+}
 .new_post_form {
-  background-color: lightgrey;
-  height: auto;
+  background-color: rgb(241, 241, 241);
+  border-radius: 20px;
+  padding: 20px;
+  height: 700px;
   width: auto;
-  position: absolute;
-  margin-left: 33%;
-  margin-right: 33%;
-  padding: 10px;
-  margin-top: 50px;
+  position: fixed;
+  top: 100px;
+  left: 26vw;
+  font-family:'Roboto Mono, monospace' ;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  h2{
+    color: black;
+    font-size: 50px;
+    margin-top: 0px;
+  }
+
+ #create_form{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+ }
+
+ button{
+   border: none;
+   width: fit-content;
+   margin-left: auto;
+   margin-right: auto;
+ }
+
+  hr{
+    height: .25rem;
+    width: 12%;
+    margin-top: 0;
+    margin-bottom: 1px;
+    margin-left: 44%;
+    background: rgb(241, 241, 241);
+    color: black;
+    border: none;
+    transition: .3s ease-in-out;
+  }
+
+
+ button:hover {
+  transition: 0.3s;
+  }
+
+  button:hover ~ hr {
+    background-color: black;
+  }
+
+  textarea{
+
+    width: 900px;
+    text-align: left;
+    resize: none;
+    overflow: hidden;
+    border: none;
+    border-bottom: solid rgb(211, 211, 211);
+    outline: none;
+    margin: 20px;
+
+    background-color: rgb(241, 241, 241);
+  }
+
+  #new_title{
+    padding: 0px;
+    font-size: 70px;
+    height: 80px;
+  }
+
+  #new_topic{
+    font-size: 50px;
+    height: 65px;
+    padding: 0px;
+  }
+
+  #description{
+    height: 60px;
+    padding: 0px;
+  }
+
+  #dropdown{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+
+    #new_type{
+      background-color: rgb(221, 221, 221);
+      border: none;
+      text-align: center;
+    }
+  }
 }
 
 #source_button{
@@ -106,17 +240,23 @@ textarea {
 }
 
 #edit-name {
-  margin-left: 33%;
-  margin-right: 33%;
+  margin-left: auto;
+  margin-right: auto;
   right: 0px;
   font-size: small;
-  height: 60px;
+  height: max-content;
   width: 525px;
   padding: 6px;
-  background-color: black;
+  background-color: white;
+  border-radius: 0px 0px 15px 15px;
+  border-bottom: solid black;
+  border-left: solid black;
+  border-right: solid black;
 
-  .label{
-    vertical-align: center;
+  #update-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   textarea {
@@ -125,5 +265,154 @@ textarea {
     resize: none;
     overflow: hidden;
     outline: none;
+    margin-left: 20%;
+    margin-right: 33%;
+
+    text-align: center;
   }
+
+  button{
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 33%;
+    margin-top:7px;
+
+    background-color: black;
+    color: white;
+    font-family: 'Roboto Mono, monospace';
+    font-weight: bold;
+    border-radius: 15px;
+  }
+}
+
+#pagename span{
+  font-size: 50px;
+  color: black;
+}
+
+hr{
+  height: .25rem;
+  width: 17%;
+  margin-top: 0;
+  margin-bottom: 1px;
+  margin-left: 0%;
+  background: white;
+  color: black;
+  border: none;
+  transition: .3s ease-in-out;
+}
+
+#favourite:hover ~ hr{
+  margin-left: 6%;
+  background-color: black;
+}
+
+#search_button:hover ~ hr{
+  margin-left: 208px;
+  width: 20%;
+  background-color: black;
+}
+
+#new-post:hover ~ hr{
+  margin-left: 400px;
+  width: 25%;
+  background-color:black
+}
+
+//BUTTONS
+@mixin btn-border-drawing($color: #ccc, $hover: black, $width: 2px, $vertical: top, $horizontal: left, $duration: 0.25s) {
+  box-shadow: inset 0 0 0 $width $color;
+  color: $color;
+  transition: color $duration $duration/3;
+  position: relative;
+  &::before,
+  &::after {
+    border: 0 solid transparent;
+    box-sizing: border-box;
+    content: '';
+    pointer-events: none;
+    position: absolute;
+    width: 0; height: 0;
+    #{$vertical}: 0;
+    #{$horizontal}: 0;
+  }
+  &::before {
+    $h-side: if($horizontal == 'left', 'right', 'left');
+    border-#{$vertical}-width: $width;
+    border-#{$h-side}-width: $width;
+  }
+  &::after {
+    $v-side: if($vertical == 'top', 'bottom', 'top');
+    border-#{$v-side}-width: $width;
+    border-#{$horizontal}-width: $width;
+  }
+  &:hover {
+    color: $hover;
+    &::before,
+    &::after {
+      border-color: $hover;
+      transition: border-color 0s, width $duration, height $duration;
+      width: 100%;
+      height: 100%;
+    }
+    &::before { transition-delay: 0s, 0s, $duration; }
+    &::after { transition-delay: 0s, $duration, 0s; }
+  }
+}
+.draw-border {
+  @include btn-border-drawing(#000000, #e7ab06, 4px, bottom, right);
+}
+// UPDATE BUTTON
+@mixin btn-update-prof($color: #ccc, $hover: black, $width: 2px, $vertical: top, $horizontal: left, $duration: 0.25s) {
+  box-shadow: inset 0 0 0 $width $color;
+  color: $color;
+  transition: color $duration $duration/3;
+  position: relative;
+  &::before,
+  &::after {
+    border: 0 solid transparent;
+    box-sizing: border-box;
+    content: '';
+    pointer-events: none;
+    position: absolute;
+    width: 0; height: 0;
+    #{$vertical}: 0;
+    #{$horizontal}: 0;
+  }
+  &::before {
+    $h-side: if($horizontal == 'left', 'right', 'left');
+    border-#{$vertical}-width: $width;
+    border-#{$h-side}-width: $width;
+  }
+  &::after {
+    $v-side: if($vertical == 'top', 'bottom', 'top');
+    border-#{$v-side}-width: $width;
+    border-#{$horizontal}-width: $width;
+  }
+  &:hover {
+    color: $hover;
+    &::before,
+    &::after {
+      border-color: $hover;
+      transition: border-color 0s, width $duration, height $duration;
+      width: 100%;
+      height: 100%;
+    }
+    &::before { transition-delay: 0s, 0s, $duration; }
+    &::after { transition-delay: 0s, $duration, 0s; }
+  }
+}
+.update-prof {
+  @include btn-update-prof(#000000, #1277d6, 4px, bottom, right);
+}
+//general button style
+.btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  line-height: 1.5;
+  font: 600 1.2rem 'Roboto Slab', sans-serif;
+  padding: 0.5em 1.3em;
+  letter-spacing: 0.05rem;
+  &:focus { outline: 2px dotted #55D7DC; }
 }
