--- a/styles/posts.scss
+++ b/styles/posts.scss
@@ -14,12 +14,12 @@
 
 .posts {
   border: 1px solid black;
+  border-radius: 10px;
   color: #f4f1ec;
-  border-radius: 25px;
   margin: 10px;
   text-align: center;
-  width: 250px;
-  height: 280px;
+  width: 350px;
+  height: 400px;
   padding: 5px;
   background-position: center;
   background-repeat: no-repeat;
@@ -28,7 +28,12 @@
   flex-direction: column;
   justify-content: space-around;
 
+  box-shadow: 0px 0px 8px rgb(0, 0, 0)
+}
 
+.posts:hover{
+  transition: 0.4s;
+  box-shadow: 3px 3px rgb(158, 155, 155);
 }
 
 h4 {
