--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,10 +130,16 @@
         <hr/>
       </form>
     </div>
-    <div class="text-post">
+    <div class="text-post"></div>
+    <div class="mywall-info">
+      <h2 class="mypost">#My Posts</h2>
+      <h2 class="myfav">#Favourites</h2>
     </div>
     <div class="my-wall">
       <div class="my-post"></div>
+      <!-- for divide line -->
+      <div class="vl"></div>
+      <!-- for divide line -->
       <div class="favourite-post"></div>
     </div>
   </header>
