--- a/styles/posts.scss
+++ b/styles/posts.scss
@@ -71,6 +71,7 @@ h6 {
   flex-wrap: wrap;
   width: 50%;
   justify-content: space-around;
+  border-left: 3px solid black;
 }
 
 .my-post {
@@ -88,5 +89,46 @@ a {
 .fa-heart:hover {
   color:red;
 }
+
+
+
+.mywall-info{
+  margin-top:50px;
+  display:flex;
+  justify-content: space-around;
+  margin-bottom:-150px;
+  }
+
+.myfav {
+    width: 11ch;
+    animation: typing 2s steps(11), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: monospace;
+}
+.mypost {
+  width: 9ch;
+  animation: typing 2s steps(9), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+}
+
+  @keyframes typing {
+    from {
+      width: 0
+    }
+  }
+
+  @keyframes blink {
+    50% {
+      border-color: transparent
+    }
+  }
+
+
+
 
 
