--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,7 @@
 </head>
 
 <body>
+  <div id="intro-message">Ready to learn? You <b>CAN</b> do it!</div>
   <nav>
     <div class="href">
       <div class="home">
