--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -15,5 +15,16 @@ body {
   font-weight: normal;
   border:none;
   width: 95vw;
+  overflow-x: hidden;
 
+}
+
+#intro-message {
+  font-family:'Courier New', Courier, monospace;
+  color: black;
+  position: absolute;
+  padding: 350px;
+  width: 100vw;
+  height: 100%;
+  text-align: center;
 }
