will add error handling for new post submition as well as clear the comment textarea on submit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,6 +105,7 @@
     <div class="new_post_form">
       <form id = "create_form" action="/create" method="POST">
         <div><h2 style="text-align: center;">New Post</h2></div>
+        <div style ="text-align: center;"class = "new-post-error"></div>
         <div>
           <textarea name="title" id="new_title" placeholder="Title"></textarea>
         </div>
