--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -331,6 +331,12 @@ hr{
   background-color:black
 }
 
+.new-post-error {
+  color: red;
+  border-bottom: 1px solid red;
+  margin-left: 33%;
+  margin-right: 33%;
+}
 //BUTTONS
 @mixin btn-border-drawing($color: #ccc, $hover: black, $width: 2px, $vertical: top, $horizontal: left, $duration: 0.25s) {
   box-shadow: inset 0 0 0 $width $color;
