--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
       <hr />
     </div>
     <div id = "login-div">
-      <span class="login-info"><%= name%>
+      <span class="login-info"><span id="logged_user"><%= name%></span>
         <i class="far fa-user-circle"></i>
       </span>
       <button class="btn draw-border">
