--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/posts.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/button.css" type="text/css" />
   <link rel="stylesheet" href="/styles/single_post.css" type="text/css" />
   <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
 
