--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="/styles/posts.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/button.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/searchform.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/update_profile.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/new_post.css" type="text/css" />
   <link rel="stylesheet" href="/styles/single_post.css" type="text/css" />
   <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
 
