--- a/styles/button.scss
+++ b/styles/button.scss
@@ -1,4 +1,4 @@
-// preset groups of CSS declarations for buttons
+//groups of CSS declarations for LOGOUT AND UPDATE
 @mixin btn-border-drawing($color: #ccc, $hover: black, $width: 2px, $vertical: top, $horizontal: left, $duration: 0.25s) {
   box-shadow: inset 0 0 0 $width $color;
   color: $color;
