final implementation and checks completed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -152,14 +152,14 @@
   <section id="footer">
     <div class="container">
       <div class="social">
-            <a href="/"><i class="fab fa-facebook"></i></a>
-            <a href="/"><i class="fab fa-twitter"></i></a>
-            <a href="/"><i class="fab fa-instagram"></i></a>
-            <a href="/"><i class="fab fa-google-plus"></i></a>
-            <a href="/"><i class="fa fa-envelope"></i></a>
+            <a href="https://www.facebook.com/ChristianNally"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/KimKardashian"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/active_islands/"><i class="fab fa-instagram"></i></a>
+            <a href="https://support.google.com/googlecurrents/answer/9217723/frequently-asked-questions-about-the-google-shutdown?hl=en"><i class="fab fa-google-plus"></i></a>
+            <a href="https://www.lighthouselabs.ca/"><i class="fa fa-envelope"></i></a>
       </div>
         <div class="footer-text">
-          <p><u><a href="/" style="color:black">Resource Wall</a></u> is a midterm project of LighthouseLab.</p>
+          <p><u><a href="/" style="color:black">Resource Wall</a></u> is a midterm project by Group 8 @mattluo90, @NickAz123, @copelandbrandon for LighthouseLab.</p>
           <p class="h6">© All right Reversed.<a  href="/"style="color:black" >CanAcademy</a></p>
       </div>
     </div>
